--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@google/generative-ai": "^0.24.1",
     "firebase": "^12.7.0",
     "lucide-react": "^0.562.0",
+    "mammoth": "^1.11.0",
+    "pdfjs-dist": "^5.4.530",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^14.3.8",
     "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
